--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,35 @@
-version: '3.5'
-
+version: '3'
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile.production
+    ports:
+      - 9000:9000
+    command:
+      - bash
+      - -c
+      - |
+        php-fpm
+    networks:
+      - ocr
+    user: www-data
 
-    nginx:
-      image: ${COMPOSE_PROJECT_NAME}-nginx:latest
-      build:
-        context: ./docker/
-        args:
-          BUILD_ARGUMENT_ENV: dev
-        dockerfile: ./nginx/Dockerfile
-      container_name: ${COMPOSE_PROJECT_NAME}-nginx
-      restart: always
-      ports:
-        - "${WEB_PORT_HTTP}:80"
-        - "${WEB_PORT_SSL}:443"
-      volumes:
-        - ./:/var/www/html:ro,cached
-      depends_on:
-        - laravel
-      networks:
-        - laravel
-
-    laravel: &laravel-template
-      image: ${COMPOSE_PROJECT_NAME}-laravel:latest
-      build:
-        context: .
-        args:
-          BUILD_ARGUMENT_ENV: dev
-          HOST_UID: ${HOST_UID}
-          HOST_GID: ${HOST_GID}
-          XDEBUG_CONFIG: ${XDEBUG_CONFIG}
-        dockerfile: ./Dockerfile
-      container_name: ${COMPOSE_PROJECT_NAME}-laravel
-      volumes:
-        - ./:/var/www/html:cached
-      networks:
-        - laravel
-
-    node:
-      build:
-        context: .
-        dockerfile: ./docker/nodejs/Dockerfile
-      tty: true
-      ports:
-        - "5173:5173"
-      working_dir: /var/www
-      volumes:
-        - .:/var/www
-      networks:
-        - laravel
+  nginx:
+    image: nginx:latest
+    ports:
+      - 8080:80
+      - 4430:443
+    volumes:
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/ssl/qwintry.pem:/etc/nginx/ssl/qwintry.pem
+      - ./docker/nginx/ssl/qwintry-key.pem:/etc/nginx/ssl/qwintry-key.pem
+      - .:/var/www/html
+      - /etc/hosts:/etc/hosts
+    depends_on:
+      - app
+    networks:
+      - ocr
 
 networks:
-  laravel:
-    name: laravel
+  ocr:
