--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,23 +1,10 @@
-FROM nginx:alpine
+# Используем официальный образ Nginx
+FROM nginx:latest
 
-# set main params
-ARG BUILD_ARGUMENT_ENV=dev
-ENV ENV=$BUILD_ARGUMENT_ENV
+# Открываем порт 80 для веб-трафика
+EXPOSE 80
 
-RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
-    ln -sf /dev/stderr /var/log/nginx/error.log && \
-    rm -rf /etc/nginx/conf.d/*
+USER www-data
 
-# install openssl
-RUN apk add --update openssl && \
-    rm -rf /var/cache/apk/*
-
-# create folder for certificates
-RUN mkdir -p /etc/nginx/certificates
-
-# generate certificates
-# TODO: change it and make additional logic for production environment
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/certificates/key.pem -out /etc/nginx/certificates/cert.pem -subj "/C=AT/ST=Vienna/L=Vienna/O=Security/OU=Development/CN=example.com"
-
-# put nginx config
-COPY ./$BUILD_ARGUMENT_ENV/nginx.conf /etc/nginx/conf.d/default.conf
+# Запускаем Nginx в фоновом режиме при старте контейнера
+CMD ["nginx", "-g", "daemon off;"]
